exports[`Rich Text Editor > Quote > using the toolbar > should preserve marks & inline elements #0`] =
{
  "content": [
    {
      "content": [
        {
          "content": [
            {
              "data": {},
              "marks": [
                {
                  "type": "bold"
                }
              ],
              "nodeType": "text",
              "value": "bold"
            },
            {
              "data": {},
              "marks": [],
              "nodeType": "text",
              "value": " "
            },
            {
              "data": {},
              "marks": [
                {
                  "type": "italic"
                }
              ],
              "nodeType": "text",
              "value": "italic"
            },
            {
              "data": {},
              "marks": [],
              "nodeType": "text",
              "value": " "
            },
            {
              "data": {},
              "marks": [
                {
                  "type": "underline"
                }
              ],
              "nodeType": "text",
              "value": "underline"
            },
            {
              "data": {},
              "marks": [],
              "nodeType": "text",
              "value": " "
            },
            {
              "data": {},
              "marks": [
                {
                  "type": "code"
                }
              ],
              "nodeType": "text",
              "value": "code"
            },
            {
              "data": {},
              "marks": [],
              "nodeType": "text",
              "value": " "
            },
            {
              "content": [
                {
                  "data": {},
                  "marks": [],
                  "nodeType": "text",
                  "value": "link"
                }
              ],
              "data": {
                "uri": "https://example.com"
              },
              "nodeType": "hyperlink"
            },
            {
              "data": {},
              "marks": [],
              "nodeType": "text",
              "value": " "
            },
            {
              "content": [],
              "data": {
                "target": {
                  "sys": {
                    "id": "example-entity-id",
                    "linkType": "Entry",
                    "type": "Link"
                  }
                }
              },
              "nodeType": "embedded-entry-inline"
            },
            {
              "data": {},
              "marks": [],
              "nodeType": "text",
              "value": " more text"
            }
          ],
          "data": {},
          "nodeType": "paragraph"
        }
      ],
      "data": {},
      "nodeType": "blockquote"
    },
    {
      "content": [
        {
          "data": {},
          "marks": [],
          "nodeType": "text",
          "value": ""
        }
      ],
      "data": {},
      "nodeType": "paragraph"
    }
  ],
  "data": {},
  "nodeType": "document"
};

exports[`Rich Text Editor > Quote > using hotkey (mod+shift+1) > should preserve marks & inline elements #0`] =
{
  "content": [
    {
      "content": [
        {
          "content": [
            {
              "data": {},
              "marks": [
                {
                  "type": "bold"
                }
              ],
              "nodeType": "text",
              "value": "bold"
            },
            {
              "data": {},
              "marks": [],
              "nodeType": "text",
              "value": " "
            },
            {
              "data": {},
              "marks": [
                {
                  "type": "italic"
                }
              ],
              "nodeType": "text",
              "value": "italic"
            },
            {
              "data": {},
              "marks": [],
              "nodeType": "text",
              "value": " "
            },
            {
              "data": {},
              "marks": [
                {
                  "type": "underline"
                }
              ],
              "nodeType": "text",
              "value": "underline"
            },
            {
              "data": {},
              "marks": [],
              "nodeType": "text",
              "value": " "
            },
            {
              "data": {},
              "marks": [
                {
                  "type": "code"
                }
              ],
              "nodeType": "text",
              "value": "code"
            },
            {
              "data": {},
              "marks": [],
              "nodeType": "text",
              "value": " "
            },
            {
              "content": [
                {
                  "data": {},
                  "marks": [],
                  "nodeType": "text",
                  "value": "link"
                }
              ],
              "data": {
                "uri": "https://example.com"
              },
              "nodeType": "hyperlink"
            },
            {
              "data": {},
              "marks": [],
              "nodeType": "text",
              "value": " "
            },
            {
              "content": [],
              "data": {
                "target": {
                  "sys": {
                    "id": "example-entity-id",
                    "linkType": "Entry",
                    "type": "Link"
                  }
                }
              },
              "nodeType": "embedded-entry-inline"
            },
            {
              "data": {},
              "marks": [],
              "nodeType": "text",
              "value": " more text"
            }
          ],
          "data": {},
          "nodeType": "paragraph"
        }
      ],
      "data": {},
      "nodeType": "blockquote"
    },
    {
      "content": [
        {
          "data": {},
          "marks": [],
          "nodeType": "text",
          "value": ""
        }
      ],
      "data": {},
      "nodeType": "paragraph"
    }
  ],
  "data": {},
  "nodeType": "document"
};

exports[`Rich Text Editor > New Line > in a list > should add a new line after entity block in same list item #0`] =
{
  "content": [
    {
      "content": [
        {
          "content": [
            {
              "content": [
                {
                  "data": {},
                  "marks": [],
                  "nodeType": "text",
                  "value": "some text 1"
                }
              ],
              "data": {},
              "nodeType": "paragraph"
            }
          ],
          "data": {},
          "nodeType": "list-item"
        },
        {
          "content": [
            {
              "content": [],
              "data": {
                "target": {
                  "sys": {
                    "id": "example-entity-id",
                    "linkType": "Entry",
                    "type": "Link"
                  }
                }
              },
              "nodeType": "embedded-entry-block"
            },
            {
              "content": [
                {
                  "data": {},
                  "marks": [],
                  "nodeType": "text",
                  "value": "some more text"
                }
              ],
              "data": {},
              "nodeType": "paragraph"
            },
            {
              "content": [],
              "data": {
                "target": {
                  "sys": {
                    "id": "example-entity-id",
                    "linkType": "Entry",
                    "type": "Link"
                  }
                }
              },
              "nodeType": "embedded-entry-block"
            },
            {
              "content": [
                {
                  "data": {},
                  "marks": [],
                  "nodeType": "text",
                  "value": ""
                }
              ],
              "data": {},
              "nodeType": "paragraph"
            }
          ],
          "data": {},
          "nodeType": "list-item"
        }
      ],
      "data": {},
      "nodeType": "unordered-list"
    },
    {
      "content": [
        {
          "data": {},
          "marks": [],
          "nodeType": "text",
          "value": ""
        }
      ],
      "data": {},
      "nodeType": "paragraph"
    }
  ],
  "data": {},
  "nodeType": "document"
};

exports[`Rich Text Editor > invalid document structure > runs initial normalization without triggering a value change #0`] =
{
  "content": [
    {
      "content": [
        {
          "data": {},
          "marks": [],
          "nodeType": "text",
          "value": ""
        },
        {
          "content": [
            {
              "data": {},
              "marks": [],
              "nodeType": "text",
              "value": "This is a hyperlink"
            }
          ],
          "data": {
            "uri": "https://exmaple.com"
          },
          "nodeType": "hyperlink"
        },
        {
          "data": {},
          "marks": [],
          "nodeType": "text",
          "value": ""
        }
      ],
      "data": {},
      "nodeType": "paragraph"
    },
    {
      "content": [
        {
          "data": {},
          "marks": [],
          "nodeType": "text",
          "value": ""
        }
      ],
      "data": {},
      "nodeType": "paragraph"
    },
    {
      "content": [
        {
          "data": {},
          "marks": [],
          "nodeType": "text",
          "value": ""
        }
      ],
      "data": {},
      "nodeType": "heading-1"
    },
    {
      "content": [
        {
          "data": {},
          "marks": [],
          "nodeType": "text",
          "value": "This is a paragraph"
        }
      ],
      "data": {},
      "nodeType": "paragraph"
    },
    {
      "content": [
        {
          "data": {},
          "marks": [
            {
              "type": "bold"
            },
            {
              "type": "superscript"
            },
            {
              "type": "banana"
            }
          ],
          "nodeType": "text",
          "value": "Text with custom marks"
        }
      ],
      "data": {},
      "nodeType": "paragraph"
    },
    {
      "content": [
        {
          "content": [
            {
              "data": {},
              "marks": [],
              "nodeType": "text",
              "value": ""
            }
          ],
          "data": {},
          "nodeType": "paragraph"
        }
      ],
      "data": {},
      "nodeType": "blockquote"
    },
    {
      "content": [
        {
          "content": [
            {
              "content": [
                {
                  "data": {},
                  "marks": [],
                  "nodeType": "text",
                  "value": ""
                }
              ],
              "data": {},
              "nodeType": "paragraph"
            }
          ],
          "data": {},
          "nodeType": "list-item"
        },
        {
          "content": [
            {
              "content": [
                {
                  "data": {},
                  "marks": [],
                  "nodeType": "text",
                  "value": "paragraph inside list item"
                }
              ],
              "data": {},
              "nodeType": "paragraph"
            },
            {
              "content": [
                {
                  "content": [
                    {
                      "content": [
                        {
                          "data": {},
                          "marks": [],
                          "nodeType": "text",
                          "value": "paragraph inside a nested list"
                        }
                      ],
                      "data": {},
                      "nodeType": "paragraph"
                    }
                  ],
                  "data": {},
                  "nodeType": "list-item"
                }
              ],
              "data": {},
              "nodeType": "unordered-list"
            },
            {
              "content": [
                {
                  "content": [
                    {
                      "data": {},
                      "marks": [],
                      "nodeType": "text",
                      "value": "blockquote inside list item"
                    }
                  ],
                  "data": {},
                  "nodeType": "paragraph"
                }
              ],
              "data": {},
              "nodeType": "blockquote"
            }
          ],
          "data": {},
          "nodeType": "list-item"
        }
      ],
      "data": {},
      "nodeType": "unordered-list"
    },
    {
      "content": [
        {
          "content": [
            {
              "content": [
                {
                  "content": [
                    {
                      "data": {},
                      "marks": [],
                      "nodeType": "text",
                      "value": ""
                    }
                  ],
                  "data": {},
                  "nodeType": "paragraph"
                }
              ],
              "data": {},
              "nodeType": "table-cell"
            }
          ],
          "data": {},
          "nodeType": "table-row"
        }
      ],
      "data": {},
      "nodeType": "table"
    },
    {
      "content": [
        {
          "content": [
            {
              "content": [
                {
                  "content": [
                    {
                      "data": {},
                      "marks": [],
                      "nodeType": "text",
                      "value": "cell #1"
                    }
                  ],
                  "data": {},
                  "nodeType": "paragraph"
                }
              ],
              "data": {},
              "nodeType": "table-cell"
            },
            {
              "content": [
                {
                  "content": [
                    {
                      "data": {},
                      "marks": [],
                      "nodeType": "text",
                      "value": ""
                    }
                  ],
                  "data": {},
                  "nodeType": "paragraph"
                }
              ],
              "data": {},
              "nodeType": "table-cell"
            },
            {
              "content": [
                {
                  "content": [
                    {
                      "data": {},
                      "marks": [],
                      "nodeType": "text",
                      "value": ""
                    }
                  ],
                  "data": {},
                  "nodeType": "paragraph"
                }
              ],
              "data": {},
              "nodeType": "table-cell"
            }
          ],
          "data": {},
          "nodeType": "table-row"
        },
        {
          "content": [
            {
              "content": [
                {
                  "content": [
                    {
                      "data": {},
                      "marks": [],
                      "nodeType": "text",
                      "value": "cell #2"
                    }
                  ],
                  "data": {},
                  "nodeType": "paragraph"
                }
              ],
              "data": {},
              "nodeType": "table-cell"
            },
            {
              "content": [
                {
                  "content": [
                    {
                      "data": {},
                      "marks": [],
                      "nodeType": "text",
                      "value": "cell #3"
                    }
                  ],
                  "data": {},
                  "nodeType": "paragraph"
                }
              ],
              "data": {},
              "nodeType": "table-cell"
            },
            {
              "content": [
                {
                  "content": [
                    {
                      "data": {},
                      "marks": [],
                      "nodeType": "text",
                      "value": "cell #4"
                    }
                  ],
                  "data": {},
                  "nodeType": "paragraph"
                }
              ],
              "data": {},
              "nodeType": "table-cell"
            }
          ],
          "data": {},
          "nodeType": "table-row"
        },
        {
          "content": [
            {
              "content": [
                {
                  "content": [
                    {
                      "data": {},
                      "marks": [],
                      "nodeType": "text",
                      "value": "cell #5"
                    }
                  ],
                  "data": {},
                  "nodeType": "paragraph"
                }
              ],
              "data": {},
              "nodeType": "table-cell"
            },
            {
              "content": [
                {
                  "content": [
                    {
                      "data": {},
                      "marks": [],
                      "nodeType": "text",
                      "value": "cell #6"
                    }
                  ],
                  "data": {},
                  "nodeType": "paragraph"
                }
              ],
              "data": {},
              "nodeType": "table-cell"
            },
            {
              "content": [
                {
                  "content": [
                    {
                      "data": {},
                      "marks": [],
                      "nodeType": "text",
                      "value": ""
                    }
                  ],
                  "data": {},
                  "nodeType": "paragraph"
                }
              ],
              "data": {},
              "nodeType": "table-cell"
            }
          ],
          "data": {},
          "nodeType": "table-row"
        }
      ],
      "data": {},
      "nodeType": "table"
    },
    {
      "content": [
        {
          "data": {},
          "marks": [],
          "nodeType": "text",
          "value": "end"
        }
      ],
      "data": {},
      "nodeType": "paragraph"
    }
  ],
  "data": {},
  "nodeType": "document"
};

exports[`Rich Text Editor > Quote > using the toolbar > should toggle off empty quotes on backspace #0`] =
{
  "content": [
    {
      "content": [
        {
          "data": {},
          "marks": [],
          "nodeType": "text",
          "value": ""
        }
      ],
      "data": {},
      "nodeType": "paragraph"
    },
    {
      "content": [
        {
          "data": {},
          "marks": [],
          "nodeType": "text",
          "value": ""
        }
      ],
      "data": {},
      "nodeType": "paragraph"
    }
  ],
  "data": {},
  "nodeType": "document"
};

exports[`Rich Text Editor > Quote > using hotkey (mod+shift+1) > should toggle off empty quotes on backspace #0`] =
{
  "content": [
    {
      "content": [
        {
          "data": {},
          "marks": [],
          "nodeType": "text",
          "value": ""
        }
      ],
      "data": {},
      "nodeType": "paragraph"
    },
    {
      "content": [
        {
          "data": {},
          "marks": [],
          "nodeType": "text",
          "value": ""
        }
      ],
      "data": {},
      "nodeType": "paragraph"
    }
  ],
  "data": {},
  "nodeType": "document"
};

exports[`Rich Text Editor > Commands > Palette > should embed inline #0`] =
{
  "content": [
    {
      "content": [
        {
          "data": {},
          "marks": [],
          "nodeType": "text",
          "value": ""
        },
        {
          "content": [],
          "data": {
            "target": {
              "sys": {
                "id": "exampleCT",
                "linkType": "Entry",
                "type": "Link"
              }
            }
          },
          "nodeType": "embedded-entry-inline"
        },
        {
          "data": {},
          "marks": [],
          "nodeType": "text",
          "value": ""
        }
      ],
      "data": {},
      "nodeType": "paragraph"
    }
  ],
  "data": {},
  "nodeType": "document"
};

exports[`Rich Text Editor > Commands > Palette > should embed asset #0`] =
{
  "content": [
    {
      "content": [
        {
          "data": {},
          "marks": [],
          "nodeType": "text",
          "value": ""
        }
      ],
      "data": {},
      "nodeType": "paragraph"
    },
    {
      "content": [],
      "data": {
        "target": {
          "sys": {
            "id": "published_asset",
            "linkType": "Asset",
            "type": "Link"
          }
        }
      },
      "nodeType": "embedded-asset-block"
    },
    {
      "content": [
        {
          "data": {},
          "marks": [],
          "nodeType": "text",
          "value": ""
        }
      ],
      "data": {},
      "nodeType": "paragraph"
    }
  ],
  "data": {},
  "nodeType": "document"
};

exports[`Rich Text Editor > Commands > Palette > should select next item on down arrow press #0`] =
{
  "content": [
    {
      "content": [
        {
          "data": {},
          "marks": [],
          "nodeType": "text",
          "value": ""
        },
        {
          "content": [],
          "data": {
            "target": {
              "sys": {
                "id": "exampleCT",
                "linkType": "Entry",
                "type": "Link"
              }
            }
          },
          "nodeType": "embedded-entry-inline"
        },
        {
          "data": {},
          "marks": [],
          "nodeType": "text",
          "value": ""
        }
      ],
      "data": {},
      "nodeType": "paragraph"
    }
  ],
  "data": {},
  "nodeType": "document"
};

exports[`Rich Text Editor > Commands > Palette > should not delete adjacent text #0`] =
{
  "content": [
    {
      "content": [
        {
          "data": {},
          "marks": [],
          "nodeType": "text",
          "value": "test"
        },
        {
          "content": [],
          "data": {
            "target": {
              "sys": {
                "id": "exampleCT",
                "linkType": "Entry",
                "type": "Link"
              }
            }
          },
          "nodeType": "embedded-entry-inline"
        },
        {
          "data": {},
          "marks": [],
          "nodeType": "text",
          "value": ""
        }
      ],
      "data": {},
      "nodeType": "paragraph"
    }
  ],
  "data": {},
  "nodeType": "document"
};
